clusters/9ka/iioflux/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iioflux
  namespace: iioflux
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: iioflux
  ingress: []
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: influxdb
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: influxdb
    ports:
    - protocol: TCP
      port: 8086
  - to:
    - ipBlock:
        cidr: 172.21.42.0/24
    ports:
    - protocol: TCP
      port: 30431
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
